syntax = "proto3";

package Protos.Dto.Libro.Request;
option csharp_namespace = "TiendaServicios.Contracts.Protos.Dto.Libro.Request";

import "Protos/Models/LibroModel.proto";

message AddLibroRequest
{
	Protos.Models.LibroModel LibroModel = 1;
}
