syntax = "proto3";

package Protos.Dto.Libro.Request;
option csharp_namespace = "TiendaServicios.Contracts.Protos.Dto.Libro.Request";

message GetLibroRequest
{
	int32 LibroId = 1;
}
