syntax = "proto3";

package Protos.Dto.Libro.Response;
option csharp_namespace = "TiendaServicios.Contracts.Protos.Dto.Libro.Response";

import "Protos/Models/LibroModel.proto";

message GetLibroResponse
{
	bool success = 1;
	Protos.Models.LibroModel LibroModel = 2;
}
