syntax = "proto3";

package Protos.Models;
option csharp_namespace = "TiendaServicios.Contracts.Protos.Models";

import "google/protobuf/timestamp.proto";

message LibroModel
{
    int32 Id = 1;
    string LibreriaMaterialGuid = 2;
    string Titulo = 3;
    google.protobuf.Timestamp FechaPublicacion = 4;
    string AutorLibro = 5;
}
